# PaperRadar

./: .gitignore  LICENSE  PaperRadar.debug.spec  PaperRadar.qt.spec  PaperRadar.release.spec  README.md  main_qt.py  requirements.txt  run.py
build_scripts/: build_exe.ps1  build_installer.ps1  build_qt_exe.ps1  clean_build.ps1
config_templates/: settings.example.yaml  sources.example.yaml
desktop/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: developer_guide.md  installation.md  profile_guide.md  release_checklist.md
installer/: ChineseSimplified.isl  PaperRadar.iss  PaperRadar_Desktop.iss  PaperRadar_Tauri.iss
optical_radar/: app.py  arxiv_client.py  crossref_client.py  database.py  journal_fetcher.py  keyword_filter.py  main_window.py  metadata_enricher.py  models.py  profile_manager.py  profile_terms.py  report.py  scorer.py  settings.py  utils.py  version.py
packaging/: pyside6_dll_path.py
paper_radar/: app.py  arxiv_client.py  cache_manager.py  crossref_client.py  database.py  main_window.py  models.py  network.py  profile_manager.py  report.py  scorer.py  services.py  settings.py  tk_window.py  tray.py  utils.py  version.py
paperradar-tauri/: README.md  docs-migration.md  package-lock.json  package.json
paperradar_qt/: app.py  components.py  main_window.py  styles.py
scripts/: build_debug_exe.bat  build_release_exe.bat  diagnose_crossref.py  diagnose_rss.py  recompute_scores.py  setup_venv.bat
tests/: test_scorer.py  (+8 more)
(+58 files in other folders)
