[package]
name = "paperradar"
version = "0.3.0"
description = "PaperRadar desktop shell"
authors = ["PaperRadar"]
edition = "2021"

[lib]
name = "paperradar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
